Added contact application